RWD: on small screens, header is fixed

--- a/sites/all/themes/bcnencomu/css/media.css
+++ b/sites/all/themes/bcnencomu/css/media.css
@@ -327,6 +327,16 @@
     margin: 0 0 20px;
   }
 
+  header[role="banner"] {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: white;
+  }
+  #page {
+    padding-top: 70px;
+  }
+
   input[type="text"], 
   input[type="password"], 
   input[type="email"],
